--- a/resources/views/assets/css/style.css
+++ b/resources/views/assets/css/style.css
@@ -107,3 +107,10 @@ img {
     text-align: center;
     margin-top: 20px;
 }
+.aboutus{
+    color: white;
+    height: 200px;
+}
+.aboutustest{
+    margin: 20px 0px 10px 0px;
+}
